--- a/rmt/src/main/webapp/css/main.css
+++ b/rmt/src/main/webapp/css/main.css
@@ -1001,7 +1001,7 @@ td.rsvpstatus {
     Weather widget
 **************************************************************************/
 iframe.wetteronline {
-    border: 0 none;
+    border: 0px none;
     height: 308px;
     margin-left: -20px; // to left-align with heading
     overflow: hidden;
